--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -36,13 +36,7 @@ jobs:
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
-      - name: Notify slack
-        env:
-         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-        uses: pullreminders/slack-action@master
-        with:
-            args: '{\"channel\":\"C04L5SXJ3RP\",\"text\":\"The file \`${{github.event.head_commit.message}}\` was pushed to the repository.\"}'
-
+        
   # Deployment job
   deploy:
     environment:
@@ -54,3 +48,14 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+
+      - name: Notify slack
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        uses: pullreminders/slack-action@master
+        with:
+           args: '{\"channel\":\"C04L5SXJ3RP\",\"text\":\"The file \`${{github.event.head_commit.message}}\` was pushed to the repository.\"}'
+           headers: |
+              Content-Type: application/json; charset=UTF-8
+              Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}
+
