--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Slack Notification
         uses: rtCamp/action-slack-notify@v2
         env:
-           SLACK_WEBHOOK: ${{ secrets.SLACK_BOT_TOKEN }}
+           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         with:
             args: The file `${{ github.event.head_commit.added[0] }}` was added in the commit.
 
