--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -55,6 +55,9 @@ jobs:
         env:
            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
         with:
-            args: The file `${{ github.event.head_commit.added[0] }}` was added in the commit.
+            args: The file `${{ github.event.head_commit.added[0] }}` was added in the commit. Check it out at https://hasankfz.github.io/mobile-app-reports.github.io/${{github.event.head_commit.added[0]}}
+
+
+
 
 
