--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -54,9 +54,9 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         env:
            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-        with:
-            args: The file `${{ github.event.head_commit.added[0] }}` was added in the commit. Check it out at https://hasankfz.github.io/mobile-app-reports.github.io/${{github.event.head_commit.added[0]}}
+           SLACK_MESSAGE: 'https://hasankfz.github.io/mobile-app-reports.github.io/${{github.event.head_commit.added[0]}}'
 
+ 
 
 
 
