--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -47,6 +47,8 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+      - name: Install jq
+        run: sudo apt-get install jq -y
       - name: Get File Name
         run: |
             FILE_NAME=$(jq -r .head_commit.modified[0] $GITHUB_EVENT_PATH)
@@ -56,7 +58,7 @@ jobs:
         uses: slackapi/slack-github-action@v1.23.0
         with:
           channel-id: 'C04LH0JCLQ0,C04KLL2UD70'
-          slack-message: "A file named '$FILE_NAME' was committed or pushed to the repository.\nMobile Application Report Link: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit[0]}}"
+          slack-message: "A file named '$FILE_NAME' was committed or pushed to the repository.\nMobile Application Report Link: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url}}"
         env:
            SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
