--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -52,8 +52,13 @@ jobs:
       - name: Get File Name
         run: |
             FILE_NAME=$(jq -r .head_commit.modified[0] $GITHUB_EVENT_PATH)
-      - name: Echo File Name
-        run: git diff-tree --no-commit-id --name-only -r ${{ github.sha }}
+      - name: get changed files
+        id: getfile
+        run: |
+          echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | xargs)"
+          - name: echo output
+            run: |
+                echo ${{ steps.getfile.outputs.files }}
       - name: Print Event Payload
         run: cat $GITHUB_EVENT_PATH
       - name: Post to a Slack channel
