--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -47,9 +47,12 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
-      - name: Install jq
-        run: sudo apt-get install jq -y
-             git diff-tree --no-commit-id --name-only bd61ad98 -r
+
+      - uses: actions/checkout@v2
+        with:
+            # Number of commits to fetch. 0 indicates all history for all branches and tags.
+            # Default: 1
+            fetch-depth: 2
 
       - name: Print Event Payload
         run: cat $GITHUB_EVENT_PATH
