--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -27,6 +27,9 @@ jobs:
         uses: actions/checkout@v3
       - name: check file
         run: git diff-tree --no-commit-id --name-only -r ${{ github.sha }}
+      - name: check
+        run: git log --pretty=format:"%h %s" HEAD
+             git log --pretty=format:"%h %s" ${{ github.sha }}
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
