--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,10 +30,10 @@ jobs:
       - name: check
         run: git log --pretty=format:"%h %s" ${{ github.sha }}
       - name: Get latest commit name
-        run: echo "Latest commit:" $(git log -1 --pretty=%B)
+        run: echo "Latest commit file:" $(git show --name-only HEAD | tail -n 1)
         id: latest_commit
       - name: Set latest commit name environment variable
-        run: echo "::set-env name=LATEST_COMMIT::${{ steps.latest_commit.output }}"
+        run: echo "::set-env name=LATEST_COMMIT::" ${{ steps.latest_commit.output }}
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
