--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -33,7 +33,8 @@ jobs:
         run: echo "Latest commit file:" $(git show --name-only HEAD | tail -n 1)
         id: latest_commit
       - name: Set latest commit name environment variable
-        run: echo "::set-env name=LATEST_COMMIT::" ${{ steps.latest_commit.output }}
+        run: echo "Committed files:" $(git show --pretty="" --name-only <sha>)
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
