--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -78,7 +78,7 @@ jobs:
         uses: slackapi/slack-github-action@v1.23.0
         with:
           channel-id: 'C04LH0JCLQ0,C04KLL2UD70'
-          slack-message: "A file named '$FILE_NAME' was committed or pushed to the repository.\nMobile Application Report Link: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url}}"
+          slack-message: "A file named '$FILE_NAME' was committed or pushed to the repository.\nMobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/${{ steps.getfile.outputs.files }}" 
         env:
            SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
