--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,22 +1,30 @@
+# Sample workflow for building and deploying a Jekyll site to GitHub Pages
 name: Deploy_Github_Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
 
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
+  # Build job
   build:
     runs-on: ubuntu-latest
-    name: build-${{ github.run_id }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
@@ -25,16 +33,19 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
       
+        
+  # Deployment job
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build # Use the same job ID in the needs field
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+      # Checkout the source code
       - name: 'Checkout source code'
         uses: actions/checkout@v2
         with:
@@ -50,7 +61,13 @@ jobs:
         id: slack
         uses: slackapi/slack-github-action@v1.23.0
         with:
-          channel-id: 'C04LH0JCLQ0,C04KLL2UD70'
+          channel-id: 'C04LH0JCLQ0'
           slack-message: "A file named '$FILE_NAME' was committed or pushed to the repository.\nMobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/${{steps.getfile.outputs.files}}" 
         env:
            SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+
+ 
+
+
+
+
