--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -14,9 +14,6 @@ permissions:
   id-token: write
 
 # Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
 
 jobs:
   # Build job
@@ -25,6 +22,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: check file
+        run: git diff-tree --no-commit-id --name-only -r ${{ github.sha }}
+      - name: check
+        run: git log --pretty=format:"%h %s" ${{ github.sha }}
+      - name: Get latest commit name
+        run: echo "Latest commit file:" $(git show --name-only HEAD | tail -n 1)
+        id: latest_commit
+      - name: Set latest commit name environment variable
+        run: echo "Committed files:" $(git show --pretty="" --name-only ${{ github.sha }})
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
@@ -32,7 +40,7 @@ jobs:
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
-      
+
         
   # Deployment job
   deploy:
