--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -33,6 +33,9 @@ jobs:
         run: echo "Committed files:" $(git show --pretty="" --name-only ${{ github.sha }})
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - name: check
+        run: echo "Committed files:" $(git ls-tree --name-only -r ${{ github.sha }})
+        
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
