--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -34,7 +34,8 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: check
-        run: echo "Committed files:" git log -n 1 --name-only --pretty=oneline | tail -n +2
+        run: echo "Committed files:" $(git log -n 1 --name-only --pretty=oneline | tail -n +2)
+             echo "Committed files:" $(git log -n 1 --name-only --pretty=oneline | tail -n +2 ${{ github.sha }})
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
