--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: check
-        run: echo "Committed files:" $(git log -n 1 --name-only --pretty=oneline | tail -n +2)
+        run: echo "Committed files:" $(git log -n 1 --name-only --pretty=oneline | tail -n 1)
       - name: yoo 
         run: echo "Committed files:" $(git diff-tree --no-commit-id --name-only -r $(git rev-parse HEAD))
       - name: Build with Jekyll
