--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -36,7 +36,7 @@ jobs:
       - name: check
         run: echo "Committed files:" $(git log -n 1 --name-only --pretty=oneline | tail -n 1)
       - name: yoo 
-        run: echo "Committed files:" $(git diff-tree --no-commit-id --name-only -r $(git rev-parse HEAD) | tail -n 1)
+        run: echo "Committed files:" $(git diff --name-only HEAD)
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
