--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -33,17 +33,17 @@ jobs:
         run: echo "Committed files:" $(git show --pretty="" --name-only ${{ github.sha }})
       - name: Setup Pages
         uses: actions/configure-pages@v3
-      - name: check
-        run: echo "Committed files:" $(git log -n 1 --name-only --pretty=oneline | tail -n 1)
-      - name: yoo 
-        run: echo "Committed files:" $(git diff --name-only HEAD)
-      - name: Get modified files
+      - name: 'Checkout source code'
+        uses: actions/checkout@v3
+        with:
+           fetch-depth: 0
+      - name: get changed files
+        id: getfile
         run: |
-          files=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep "^mobile-report-bucket/")
-          if [[ -n $files ]]; then
-          echo "::set-output name=new_file::$(echo "$files" | head -n 1)"
-          fi
-        id: modified_files
+          echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | xargs)"
+      - name: echo output
+        run: |
+          echo ${{ steps.getfile.outputs.files }}
 
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
@@ -67,7 +67,7 @@ jobs:
 #         uses: actions/deploy-pages@v1
 #       # Checkout the source code
 #       - name: 'Checkout source code'
-#         uses: actions/checkout@v2
+#         uses: actions/checkout@v3
 #         with:
 #            fetch-depth: 0
 #       - name: get changed files
