--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -53,7 +53,7 @@ jobs:
            FILE_NAME=$(basename "$file")
            MESSAGE="A file named '$FILE_NAME' was committed or pushed to the repository.\nMobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$FILE_NAME"
            echo "Sending message: $MESSAGE"
-           slackapi/slack-github-action@v1.23.0:
+           uses: slackapi/slack-github-action@v1.23.0:
            with:
                channel-id: 'C04LH0JCLQ0'
                slack-message: $MESSAGE
