--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -44,20 +44,37 @@ jobs:
       - name: echo output
         run: |
           echo ${{ steps.getfile.outputs.files }}
-      - name: Notify on Slack
+      - name: merge notification
         if: steps.getfile.outputs.files != ''
         env:
-           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         run: |
-           for file in ${{ steps.getfile.outputs.files }}; do
-           FILE_NAME=$(basename "$file")
-           MESSAGE="A file named '$FILE_NAME' was committed or pushed to the repository.\nMobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$FILE_NAME"
-           echo "Sending message: $MESSAGE"
-           uses: slackapi/slack-github-action@v1.23.0:
-           with:
-               channel-id: 'C04LH0JCLQ0'
-               slack-message: $MESSAGE
-           done
+             MESSAGES=""
+             for file in ${{ steps.getfile.outputs.files }}; do
+             FILE_NAME=$(basename "$file")
+             MESSAGE="A file named '$FILE_NAME' was committed or pushed to the repository.\nMobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$FILE_NAME"
+             echo "Sending message: $MESSAGE"
+             MESSAGES="${MESSAGES}${MESSAGE}\n"
+             done
+        uses: slackapi/slack-github-action@v1.23.0:
+        with:
+            channel-id: 'C04LH0JCLQ0'
+            slack-message: $MESSAGES
+
+#       - name: merge notification
+#         if: steps.getfile.outputs.files != ''
+#         uses: slackapi/slack-github-action@v1.23.0
+#         env:
+#            SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+#         run: |
+#            for file in ${{ steps.getfile.outputs.files }}; do
+#            FILE_NAME=$(basename "$file")
+#            MESSAGE="A file named '$FILE_NAME' was committed or pushed to the repository.\nMobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$FILE_NAME"
+#            echo "Sending message: $MESSAGE"
+#         with:
+#            channel-id: 'C04LH0JCLQ0'
+#            slack-message: $MESSAGE
+#            done
 
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
