--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -46,20 +46,22 @@ jobs:
           echo ${{ steps.getfile.outputs.files }}
       - name: merge notification
         if: steps.getfile.outputs.files != ''
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        id: merge_notification
         run: |
-             MESSAGES=""
-             for file in ${{ steps.getfile.outputs.files }}; do
-             FILE_NAME=$(basename "$file")
-             MESSAGE="A file named '$FILE_NAME' was committed or pushed to the repository.\nMobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$FILE_NAME"
-             echo "Sending message: $MESSAGE"
-             MESSAGES="${MESSAGES}${MESSAGE}\n"
+            MESSAGES=""
+            for file in ${{ steps.getfile.outputs.files }}; do
+              FILE_NAME=$(basename "$file")
+              MESSAGE="A file named '$FILE_NAME' was committed or pushed to the repository.\nMobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$FILE_NAME\n"
+              echo "Sending message: $MESSAGE"
+              MESSAGES="${MESSAGES}${MESSAGE}"
              done
-        uses: slackapi/slack-github-action@v1.23.0:
-        with:
-            channel-id: 'C04LH0JCLQ0'
-            slack-message: $MESSAGES
+            echo "::set-output name=merged-messages::${MESSAGES}"
+
+      - name: display notification
+        if: steps.merge_notification.outputs.merged-messages != ''
+        run: |
+          echo "${{ steps.merge_notification.outputs.merged-messages }}"
+
 
 #       - name: merge notification
 #         if: steps.getfile.outputs.files != ''
