--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -63,20 +63,14 @@ jobs:
           echo "${{ steps.merge_notification.outputs.merged-messages }}"
 
 
-#       - name: merge notification
-#         if: steps.getfile.outputs.files != ''
-#         uses: slackapi/slack-github-action@v1.23.0
-#         env:
-#            SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-#         run: |
-#            for file in ${{ steps.getfile.outputs.files }}; do
-#            FILE_NAME=$(basename "$file")
-#            MESSAGE="A file named '$FILE_NAME' was committed or pushed to the repository.\nMobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$FILE_NAME"
-#            echo "Sending message: $MESSAGE"
-#         with:
-#            channel-id: 'C04LH0JCLQ0'
-#            slack-message: $MESSAGE
-#            done
+      - name: Slack Notify
+        if: steps.getfile.outputs.files != ''
+        uses: slackapi/slack-github-action@v1.23.0
+        env:
+           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        with:
+           channel-id: 'C04LH0JCLQ0'
+           slack-message: ${{ steps.merge_notification.outputs.merged-messages }}
 
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
