--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -51,7 +51,7 @@ jobs:
             MESSAGES=""
             for file in ${{ steps.getfile.outputs.files }}; do
               FILE_NAME=$(basename "$file")
-              MESSAGE="A file named '$FILE_NAME' was committed or pushed to the repository.\nMobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$FILE_NAME\n"
+              MESSAGE="A file named '$FILE_NAME' was committed or pushed to the repository.Mobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$FILE_NAME{{$'\n'}}"
               echo "Sending message: $MESSAGE"
               MESSAGES="${MESSAGES}${MESSAGE}"
              done
