--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -53,7 +53,7 @@ jobs:
               FILE_NAME=$(basename "$file")
               MESSAGE="A file named '$FILE_NAME' was committed or pushed to the repository.\n Mobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$FILE_NAME"
               echo "Sending message: $MESSAGE"
-              MESSAGES="${MESSAGES}\n${MESSAGE}"
+              MESSAGES="${MESSAGES}${MESSAGE}" + ' \n'
              done
             echo "::set-output name=merged-messages::${MESSAGES}"
 
