--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -141,11 +141,14 @@ jobs:
       - name: Slack Notify
         if: steps.getfile.outputs.files != ''
         uses: slackapi/slack-github-action@v1.23.0
+        
         env:
            SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+           MESSAGES: ${{ steps.merge_notification.outputs.merged-messages }}
+
         with:
            channel-id: 'C04LH0JCLQ0'
-           slack-message: ${{ steps.merge_notification.outputs.merged-messages }}
+           slack-message: ${{ env.MESSAGES }}
 
  
 
