--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -123,19 +123,20 @@ jobs:
         if: steps.getfile.outputs.files != ''
         id: merge_notification
         run: |
-            MESSAGES=""
+            MESSAGES=()
             for file in ${{ steps.getfile.outputs.files }}; do
               FILE_NAME=$(basename "$file")
               MESSAGE="Mobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$file"
               echo "Sending message: $MESSAGE"
-              MESSAGES="${MESSAGES}${MESSAGE}"$'\n'
+              MESSAGES+=("$MESSAGE")
              done
-            echo "::set-output name=merged-messages::${MESSAGES}"
+            echo "::set-output name=merged-messages::${MESSAGES[@]}"
 
       - name: display notification
         if: steps.merge_notification.outputs.merged-messages != ''
         run: |
-          echo "${{ join(steps.merge_notification.outputs.merged-messages, '\n') }}"
+          MESSAGES="${{ join(steps.merge_notification.outputs.merged-messages, '\n') }}"
+          echo "$MESSAGES"
 
 
       # - name: Slack Notify
