--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -140,7 +140,7 @@ jobs:
 
 
       - name: Slack Notify
-        if: git diff --name-only --diff-filter=A --relative | grep -q "^mobile-report-bucket/" #steps.getfile.outputs.files != ''
+        if: ${{git diff --name-only --diff-filter=A --relative | grep -q "^mobile-report-bucket/"}} #steps.getfile.outputs.files != ''
         uses: slackapi/slack-github-action@v1.23.0
         
         env:
