--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -20,8 +20,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 #       - name: check file
 #         run: git diff-tree --no-commit-id --name-only -r ${{ github.sha }}
 #       - name: check
@@ -31,8 +31,8 @@ jobs:
 #         id: latest_commit
 #       - name: Set latest commit name environment variable
 #         run: echo "Committed files:" $(git show --pretty="" --name-only ${{ github.sha }})
-#       - name: Setup Pages
-#         uses: actions/configure-pages@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
 #       - name: 'Checkout source code'
 #         uses: actions/checkout@v3
 #         with:
