--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -125,18 +125,14 @@ jobs:
         run: |
             MESSAGES=()
             for file in ${{ steps.getfile.outputs.files }}; do
-              FILE_NAME=$(basename "$file")
-              MESSAGE="Mobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$file"
-              echo "Sending message: $MESSAGE"
-              MESSAGES+=("$MESSAGE")
-             done
+              if [[ $file == mobile* ]]; then
+                FILE_NAME=$(basename "$file")
+                MESSAGE="Mobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$file"
+                echo "Sending message: $MESSAGE"
+                MESSAGES+=("$MESSAGE")
+              fi
+            done
             echo "::set-output name=merged-messages::${MESSAGES[@]}"
-            file_check=$(git diff --name-only --diff-filter=A --relative)
-            echo "$file_check"
-            if echo "$file_check" | grep -q "^mobile-report-bucket/"; then
-                echo "Files added to mobile-report-bucket folder"
-                echo "::set-output name=added_files::yes"
-            fi
 
       - name: display notification
         if: steps.merge_notification.outputs.merged-messages != ''
