--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -124,15 +124,19 @@ jobs:
         id: merge_notification
         run: |
             MESSAGES=()
+            count = ""
             for file in ${{ steps.getfile.outputs.files }}; do
               if [[ $file == mobile* ]]; then
                 FILE_NAME=$(basename "$file")
                 MESSAGE="Mobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$file"
                 echo "Sending message: $MESSAGE"
                 MESSAGES+=("$MESSAGE")
+              else
+                count = no
               fi
             done
             echo "::set-output name=merged-messages::${MESSAGES[@]}"
+            echo "::set-output name=added-files::${count}"
 
       - name: display notification
         if: steps.merge_notification.outputs.merged-messages != ''
@@ -142,7 +146,7 @@ jobs:
 
 
       - name: Slack Notify
-        if: steps.check-files.outputs.added_files == 'yes' # steps.getfile.outputs.files != ''
+        if: steps.check-files.outputs.added_files != 'no' # steps.getfile.outputs.files != ''
         uses: slackapi/slack-github-action@v1.23.0
         
         env:
