--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -124,7 +124,7 @@ jobs:
         id: merge_notification
         run: |
             MESSAGES=()
-            count = ""
+            count=""
             for file in ${{ steps.getfile.outputs.files }}; do
               if [[ $file == mobile* ]]; then
                 FILE_NAME=$(basename "$file")
@@ -136,7 +136,7 @@ jobs:
               fi
             done
             echo "::set-output name=merged-messages::${MESSAGES[@]}"
-            echo "::set-output name=added-files::${count}"
+            echo "::set-output name=added-files::$count"
 
       - name: display notification
         if: steps.merge_notification.outputs.merged-messages != ''
